restarting the share menu after this